--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   # CSV Export
   csv: ^6.0.0
   firebase_storage: ^13.0.0
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
