--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,10 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
-  flutter:
+http: ^1.2.0
+cloud_firestore: ^5.4.4  # or your version
+firebase_auth: ^5.3.1    # if you’re already using it
+flutter:
     sdk: flutter
 
   # Firebase
