--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,17 +4,17 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.5.0 <4.0.0"
+  sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
   http: ^1.2.2
-  firebase_core: ^4.0.0
-  cloud_firestore: ^5.4.4
-  firebase_auth: ^5.3.1
   url_launcher: ^6.3.0
+  firebase_core: 3.15.2
+  firebase_auth: 5.7.0
+  cloud_firestore: 5.6.12
 
 dev_dependencies:
   flutter_test:
