Initial commit: Set up Full Load project structure

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,23 @@ web/.dart_tool/
 # Misc
 *.iml
 *.log
+# Node.js dependencies
+node_modules/
+
+# Environment variables
+.env
+
+# Logs
+*.log
+
+# Build outputs
+dist/
+build/
+
+# IDE files
+.vscode/
+.idea/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
