--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,13 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<!-- ✅ Google Maps SDK for iOS API key -->
+	<key>GMSApiKey</key>
+	<string>AIzaSyD9vAj4KGmzoDKSSAKxapB4SVZc_Wf-WFI</string>
+
+	<!-- ✅ Required only if you ever show the user's location on the map -->
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location is used to display your position on the route map.</string>
 </dict>
 </plist>
